Deploy only the new page

--- a/example/web/index.html
+++ b/example/web/index.html
@@ -8,9 +8,8 @@
     <meta name="robots" content="noindex,nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Layrz Theme</title>
+    <title>Layrz Icons</title>
 
-    <link rel="shortcut icon" href="https://cdn.layrz.com/resources/layrz/appicon/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="https://cdn.layrz.com/resources/layrz/appicon/favicon.png" type="image/png">
 
     <style>
